--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Matthew Crowe"]
 version = "1.0.0-DEV"
 
 [deps]
+CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Jacobi = "83f21c0b-4282-5fbc-9e3f-f6da3d2e584c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -12,10 +13,10 @@ QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
-QuadGK = "2"
 FFTW = "1"
 Jacobi = "0.7"
 NLsolve = "4"
+QuadGK = "2"
 SpecialFunctions = "2"
 julia = "1.10"
 
