--- a/Project.toml
+++ b/Project.toml
@@ -13,6 +13,7 @@ QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
+CUDA = "5"
 FFTW = "1"
 Jacobi = "0.7"
 NLsolve = "4"
