--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "QGDipoles"
 uuid = "192f05a4-068c-458e-9e9e-a50cd96b7215"
-authors = ["Matthew Crowe"]
+authors = ["Matthew N. Crowe"]
 version = "1.0.1"
 
 [deps]
@@ -10,6 +10,7 @@ Jacobi = "83f21c0b-4282-5fbc-9e3f-f6da3d2e584c"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 NLsolve = "2774e3e8-f4cf-5e23-947b-6d7e65073b56"
 QuadGK = "1fd47b50-473d-5c70-9696-f719f8f3bcdc"
+RecipesBase = "3cdcf5f2-1ef4-517c-9805-6587b60abb01"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 
 [compat]
@@ -18,6 +19,7 @@ FFTW = "1"
 Jacobi = "0.7"
 NLsolve = "4"
 QuadGK = "2"
+RecipesBase = "1.3.4"
 SpecialFunctions = "2"
 julia = "1.10"
 
